# devops-tp-quentin-gouttaya

./: README.md  docker-compose.yml  package-lock.json  package.json  structure.md
.github/workflows/: ci.yml
.husky/: pre-commit
backend/: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  db.sqlite3  tarpaulin-report.html
backend/migrations/: 001_create_tasks.sql
backend/src/: main.rs
backend/tests/: integration_tests.rs
docs/: architecture.md  devops-strategy.md  security.md  tests.md
frontend/: Dockerfile  eslint.config.js  nginx.conf  package-lock.json  package.json  pnpm-lock.yaml  vite.config.js
frontend/coverage/: index.html
frontend/src/: App.svelte  App.test.js
